--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/Builds before upload.loader.js";
       var config = {
-        dataUrl: buildUrl + "/Builds before upload.data.gz",
-        frameworkUrl: buildUrl + "/Builds before upload.framework.js.gz",
-        codeUrl: buildUrl + "/Builds before upload.wasm.gz",
+        dataUrl: buildUrl + "/Builds before upload.data",
+        frameworkUrl: buildUrl + "/Builds before upload.framework.js",
+        codeUrl: buildUrl + "/Builds before upload.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "UniverseKADK",
