--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
     </div>
     <script>
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/BUILD12_herokuGithub.loader.js";
+      var loaderUrl = buildUrl + "/BUILD13_herokuappEplundareio.loader.js";
       var config = {
-        dataUrl: buildUrl + "/BUILD12_herokuGithub.data",
-        frameworkUrl: buildUrl + "/BUILD12_herokuGithub.framework.js",
-        codeUrl: buildUrl + "/BUILD12_herokuGithub.wasm",
+        dataUrl: buildUrl + "/BUILD13_herokuappEplundareio.data",
+        frameworkUrl: buildUrl + "/BUILD13_herokuappEplundareio.framework.js",
+        codeUrl: buildUrl + "/BUILD13_herokuappEplundareio.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "UniverseKADK",
