--- a/index.html
+++ b/index.html
@@ -6,6 +6,17 @@
     <title>Unity WebGL Player | UniverseKADK</title>
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
+    setInterval(function() {
+  if (typeof TOTAL_MEMORY !== 'undefined') {
+    try {
+      var totalMem = TOTAL_MEMORY/1024.0/1024.0;
+      var usedMem = (TOTAL_STACK + (STATICTOP - STATIC_BASE) +
+                    (DYNAMICTOP - DYNAMIC_BASE))/1024.0/1024.0;
+      console.log('Memory stats - used: ' + Math.ceil(usedMem) + 'M' +
+                  ' free: ' + Math.floor(totalMem - usedMem) + 'M');
+    } catch(e) {}
+  }
+}, 5000);
   </head>
   <body>
     <div id="unity-container" class="unity-desktop">
