--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
     </div>
     <script>
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/0f2fafc1d12733e57f4dcafb583e4870.js";
+      var loaderUrl = buildUrl + "/BUILD16_optimization1.loader.js";
       var config = {
-        dataUrl: buildUrl + "/0cec7c8f9fde2b8887f89754d072c731.data.gz",
-        frameworkUrl: buildUrl + "/b55254d77351dc2343228d8f5fec0af9.js.gz",
-        codeUrl: buildUrl + "/d0c147d9b12ce671ce720e70472b0946.wasm.gz",
+        dataUrl: buildUrl + "/BUILD16_optimization1.data",
+        frameworkUrl: buildUrl + "/BUILD16_optimization1.framework.js",
+        codeUrl: buildUrl + "/BUILD16_optimization1.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "UniverseKADK",
@@ -73,9 +73,6 @@
         });
       };
       document.body.appendChild(script);
-
-       
-
     </script>
   </body>
 </html>
