--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
     </div>
     <script>
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/BUILD16_optimization1.loader.js";
+      var loaderUrl = buildUrl + "/BUILD18_mockup1room.loader.js";
       var config = {
-        dataUrl: buildUrl + "/BUILD16_optimization1.data",
-        frameworkUrl: buildUrl + "/BUILD16_optimization1.framework.js",
-        codeUrl: buildUrl + "/BUILD16_optimization1.wasm",
+        dataUrl: buildUrl + "/BUILD18_mockup1room.data",
+        frameworkUrl: buildUrl + "/BUILD18_mockup1room.framework.js",
+        codeUrl: buildUrl + "/BUILD18_mockup1room.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "UniverseKADK",
