Build20 gamma light and mediumquality settings

--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
     </div>
     <script>
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/BUILD19_lighttest.loader.js";
+      var loaderUrl = buildUrl + "/BUILD20_gammaLight.loader.js";
       var config = {
-        dataUrl: buildUrl + "/BUILD19_lighttest.data",
-        frameworkUrl: buildUrl + "/BUILD19_lighttest.framework.js",
-        codeUrl: buildUrl + "/BUILD19_lighttest.wasm",
+        dataUrl: buildUrl + "/BUILD20_gammaLight.data",
+        frameworkUrl: buildUrl + "/BUILD20_gammaLight.framework.js",
+        codeUrl: buildUrl + "/BUILD20_gammaLight.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "UniverseKADK",
