--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
     </div>
     <script>
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/BUILD22_essentialBuild.loader.js";
+      var loaderUrl = buildUrl + "/BUILD23_optimizedFixed.loader.js";
       var config = {
-        dataUrl: buildUrl + "/BUILD22_essentialBuild.data",
-        frameworkUrl: buildUrl + "/BUILD22_essentialBuild.framework.js",
-        codeUrl: buildUrl + "/BUILD22_essentialBuild.wasm",
+        dataUrl: buildUrl + "/BUILD23_optimizedFixed.data",
+        frameworkUrl: buildUrl + "/BUILD23_optimizedFixed.framework.js",
+        codeUrl: buildUrl + "/BUILD23_optimizedFixed.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "UniverseKADK",
